--- a/src/static/css/admin.css
+++ b/src/static/css/admin.css
@@ -1,37 +1,56 @@
-form label:first-letter, memberform label:first-letter{
+form label:first-letter, memberform label:first-letter, phaseform::first-letter{
     text-transform: uppercase;
 }
 
-#myTable1, #membertable {
+#myTable1, #membertable, #phasetable {
     border-collapse: collapse;
     width: 100%;
     float:left;
 }
 
-#myTable1 td, #myTable1 th, #membertable td, #membertable td {
+#myTable1 td, #myTable1 th, #membertable td, #membertable th, #phasetable td, #phasetable th {
     border: 1px solid #ddd;
     padding: 8px;
 }
 
-#myTable1 tr:nth-child(even), #membertable tr:nth-child(even) {
+#myTable1 tr:nth-child(even), #membertable tr:nth-child(even), #phasetable tr:nth-child(even) {
     background-color: #f2f2f2;
 }
 
-#myTable1 tr:hover, #membertable tr:hover {
+#myTable1 tr:hover, #membertable tr:hover, #phasetable tr:hover {
     background-color: #ddd;
     visibility: visible;
 }
 
 #content {
     width:100%;
-    height: 40%;
-}
-#tablecontents, #tblctrl {
-    width: 60%;
-    float: left;
+    height: 100%;
 }
 
-#form label, #memberform label {
+#tablecontents, #tblctrl {
+    width: 60%;
+    float:left;
+}
+#add-project {
+    width:70%;
+    height:100%;
+    position:relative;
+    float:left;
+}
+#add-member {
+    width:30%;
+    float:right;
+}
+#phasediv {
+    width:68%;
+    height:100%;
+    position:absolute;
+    top:400px;
+    border-top:solid;
+    border-top-width:1px;
+}
+
+#form label, #memberform label, #phaseform label {
     float: left;
 }
 #memberdiv, #tblctrl2 {
